--- a/app/components/MyLocation/_index.scss
+++ b/app/components/MyLocation/_index.scss
@@ -6,4 +6,9 @@
   display: flex;
   justify-content: center;
   align-items: center;
+
+  .contact-us-container {
+    position: absolute;
+    bottom: 15%;
+  }
 }
