--- a/app/styles/index.scss
+++ b/app/styles/index.scss
@@ -59,3 +59,4 @@
 @import '../components/MyLocation/index';
 @import '../components/DateTimeWeather/index';
 @import '../components/common/SlidingText/index';
+@import '../components/ContactUsButton/index'
