--- a/app/components/ContactUsButton/_index.scss
+++ b/app/components/ContactUsButton/_index.scss
@@ -24,10 +24,9 @@
   display: grid;
   
   .circle {
-      background-color: red;
       position: relative;
-        width: 200px;
-         height: 200px;
+        width: 92px;
+         height: 92px;
         border-radius: 50%;
       display: flex;
           justify-content: center;
@@ -37,8 +36,8 @@
       
       .text {
         position: absolute;
-        width: 10%;
-        height: 100%;
+        width: 100%;
+        height: 130%;
         animation: anim 10s linear infinite;
       }
       
@@ -57,8 +56,9 @@
       .text span {
         position: absolute;
         left: 50%;
-        font-size: 16px;
-        transform-origin: 0 100px;
+        font-size: 8px;
+        transform-origin: 0 60px;
+        letter-spacing: -10px;
       }
 
 }
